--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body {
+  background:linear-gradient(to bottom, #22242c, #0D0D11);
+  font-family: 'DM Sans', sans-serif;
+  color: #fff;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Afacad Flux', sans-serif;
+  font-weight: 400;
+}
